tests/compile_fail/derive_bare_flag_name.rs
#[derive(ktstr::Scheduler)]
#[scheduler(name = "bad")]
#[allow(dead_code)]
enum Flag {}

fn main() {}
